kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web
  namespace: python-web
  labels:
    app: python-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-web
  strategy: {}
  template:
    metadata:
      labels:
        app: python-web
    spec:
      containers:
      - name: python-web
        image: 200984112386.dkr.ecr.us-east-1.amazonaws.com/cesar-school:latest
        ports:
          - containerPort: 8080
        resources: {}
