kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-web
  namespace: python-web
spec:
  selector:
    app: python-web
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
